# timeseries-multivariate-anomaly-detection

./: README.md  history_autoenc.pkl  model_autoenc.keras  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: data.pkl
