[project]
name = "timeseries-multivariate-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.7",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "pandas==2.1.4",
    "plotly>=6.0.0",
    "pymongo>=4.11.1",
    "python-box>=7.3.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorflow-gpu==2.10.1",
    "tensorflow-io-gcs-filesystem==0.31",
]
